--- a/css/style.css
+++ b/css/style.css
@@ -112,16 +112,12 @@ nav ul li:nth-child(4) i {
   border: 0.5rem dashed blue;
 
   padding: calc(var(--vw) * 1.3vw);
-
-  height: calc(
-    100vh - 100px - calc(var(--vw) * 1.3vw) - calc(var(--vw) * 1.3vw) -
-      calc(var(--vw) * 1.3vw)
-  );
 }
 
 .center figure {
   width: 100%;
   height: 100%;
+  height: 70vh;
   overflow: hidden;
 
   position: relative;
